--- a/style.css
+++ b/style.css
@@ -1,21 +1,16 @@
 /* Regras gerais */
 
-* {
-  font-family: Arial, sans-serif;;
-}
-
 html {
-  background-color: gray;
+  font-family: Arial, sans-serif;
 }
 
 body {
   width: 80%;
-  min-width: 800px;
   margin: 0 auto;
 }
 
 header, nav, main, footer {
-  background-color: rgba(122, 202, 214, 0.5);
+  background-color: rgba(197, 203, 204, 0.5);
   padding: 1%;
   margin-bottom: 10px
 }
@@ -44,7 +39,7 @@ nav li {
 }
 
 nav a {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   height: 2rem;
 }
 
