--- a/styles/style.css
+++ b/styles/style.css
@@ -28,12 +28,12 @@ header h1 {
 /* Menu */
 nav ul {
   display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
   padding: 0;
 }
 
 nav li {
-  display: inline;
   flex: 1;
   text-align: center;
 }
